# PyScientistLair

./: .gcloudignore  .gitignore  app.yaml  db.sqlite3  main.py  manage.py  pyproject.toml  requirements.txt
PyScientistsLair/: asgi.py  settings.py  urls.py  wsgi.py
main/: forms.py  models.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_rename_compleate_item_complete.py  0003_todolist_user.py  0004_alter_todolist_user.py  0005_alter_todolist_user.py
main/static/css/: base_style.css  home_style.css  slides_style.css  style.css  to_do_list_items_view_style.css
main/templates/main/: base.html  create_to_do_list.html  home.html  list_to_do_items.html  view_figures.html  view_portfolio.html  view_to_do_lists.html  view_vocabulary.html
register/: urls.py  views.py
register/templates/register/: register.html
register/templates/registration/: login.html
static/css/: todolist_style.css  vocabulary.css
tests/: logger_tests.py
todolist/: views.py
todolist/migrations/: 0001_initial.py
todolist/static/css/: home_style.css  login_block_style.css
todolist/static/js/: slides_stile.js
todolist/templates/todolist/: base.html  home.html  list_to_do_items.html  view_images.html  view_portfolio.html  view_to_do_lists.html
vocabulary/: admin.py  forms.py  models.py  urls.py  views.py
vocabulary/migrations/: 0001_initial.py
vocabulary/static/js/: table_filter.js
vocabulary/templates/vocabulary/: view_vocabularies_list.html  view_vocabulary_words.html  word_details.html
