[tool.poetry]
name = "repl_nix_PyScientistLair"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
pytz = "^2022.7"
tzdata = "^2022.7"
Django = "^4.1.4"
django-password-validators = "^1.7.0"
django-crispy-forms = "^1.14.0"
crispy-bootstrap5 = "^0.7"
crispy-bootstrap4 = "^2022.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
